[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
memoize = "0.4.1"
num = "0.4.1"
num-traits = "0.2.17"
once_cell = "1.19.0"
regex = "1.10.2"

[features]
part1 = []
part2 = []
